# dotobot

./: .gitignore  .style.yapf  Dockerfile  README.md  docker-compose-prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  startup.sh
.github/workflows/: docker-build-push.yml  dokku-deploy.yml
src/: main.py
storage-template/config/: homicide.json  main.json  quotes.json  replies.json  users.json
storage-template/db/: roles.json
storage/config/: main.json
